--- a/form-1/css/main.css
+++ b/form-1/css/main.css
@@ -3,6 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*Hide all inputs focus*/
+*:focus {
+    outline: none;
+}
 
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
